--- a/Week3_capstone.ipynb
+++ b/Week3_capstone.ipynb
@@ -102,6 +102,7 @@
     "strJoin = lambda x:\",\".join(x.astype(str))     \n",
     "new_df = df.groupby(['Postcode','Borough']).agg({\"Neighborhood\":strJoin})\n",
     "new_df.shape"
+    "new_df"
    ]
   },
   {
